--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 				  </li>
 				  
 				  <li class="nav-item">
-					<a class="nav-link" href="#AboutUs ">Aboutus</a>
+					<a class="nav-link" href="#AboutUs">About Us</a>
 				  </li>
 
 				  <li class="nav-item">
-					<a class="nav-link" href="#Social-media">Contactus</a>
+					<a class="nav-link" href="#Social-media">Contact Us</a>
 				  </li>
 
 				  <li class="nav-item">
@@ -259,7 +259,7 @@
 	</div>
 	
 	<div class="container">
-		<h1 class="title text-center">ABOUT US</h1>
+		<h1 class="title text-center">We Are</h1>
 		<div class="row " >
 			<div class="cpl-md-6 cost">			
 				<p>
